made rmd outline

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,21 @@
+@article{park2021reset,
+  title={Reset of hippocampal--prefrontal circuitry facilitates learning},
+  author={Park, Alan J and Harris, Alexander Z and Martyniuk, Kelly M and Chang, Chia-Yuan and Abbas, Atheir I and Lowes, Daniel C and Kellendonk, Christoph and Gogos, Joseph A and Gordon, Joshua A},
+  journal={Nature},
+  volume={591},
+  number={7851},
+  pages={615--619},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
+
+@article{brakes2021deepening,
+  title={A deepening understanding of animal culture suggests lessons for conservation},
+  author={Brakes, Philippa and Carroll, Emma L and Dall, Sasha and Keith, Sally and McGregor, Peter and Mesnick, Sarah and Noad, Michael and Rendell, Luke and Robbins, Martha and Rutz, Christian and others},
+  journal={Proceedings of the Royal Society B: Biological Sciences},
+  year={2021}
+}
+
 @article{lee2021animal,
   title={Animal Cognition in an Urbanised World},
   author={Lee, Victoria E and Thornton, Alex},
