--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,16 @@
+@article {Rodrigo2021gtgr,
+	author = {Rodrigo, Alejandro and {\'A}vila-Chauvet, Laurent and Buritic{\'a}, Jonathan},
+	title = {Daily Patterns of Foraging and Aggressive Behaviors in Great-tailed Grackle (Quiscallus mexicanus) at an Urban Patch with Availability or Absence of Resources},
+	elocation-id = {2021.06.14.448443},
+	year = {2021},
+	doi = {10.1101/2021.06.14.448443},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {The Great-tailed Grackle (Quiscalus mexicanus) seems to take advantage of inhospitable environments such as cities. However, it is not yet fully understood how these birds exploit hostile environments to their advantage. Casual observation seems to suggest that this species can obtain resources of biological importance such as food or nesting material from the trash. As a first approach to the problem, we located a patch outside a residential building, in a high-density urban area, where the residents left their trash for pick-up, and a group of wild Great-tailed grackles was identified as regular visitors. In total, 25 days were recorded at the site (November 2017 - January 2018). Events such as foraging, number of subjects present at the foraging site, aggressive behaviors between members of the group, and their relation with the presence or absence of the garbage collector truck were registered. The results show a higher number of grackles at the observation site and a higher frequency of foraging behaviors in the presence of garbage collection than in its absence. In its presence, the distribution of foraging during the day follows a normal distribution. In the absence, the distribution shows more variability towards the day. The highest frequency of interactions occurred between two grackles, yet there were records of up to eight subjects. The highest number of aggressions registered took place in the absence of garbage collection than in its presence. Moreover, the focal subject exhibits fewer agonistic behaviors compared to other members of the group, a result expected if the producer-scrounger game literature is considered. The outcome is explained in terms of deprivation and availability of resources. Finally, we conclude that grackles can exploit hazardous environments such as cities due to the highly social behaviors exhibited during foraging.Competing Interest StatementThe authors have declared no competing interest.},
+	URL = {https://www.biorxiv.org/content/early/2021/06/15/2021.06.14.448443},
+	eprint = {https://www.biorxiv.org/content/early/2021/06/15/2021.06.14.448443.full.pdf},
+	journal = {bioRxiv}
+}
+
 @article{park2021reset,
   title={Reset of hippocampal--prefrontal circuitry facilitates learning},
   author={Park, Alan J and Harris, Alexander Z and Martyniuk, Kelly M and Chang, Chia-Yuan and Abbas, Atheir I and Lowes, Daniel C and Kellendonk, Christoph and Gogos, Joseph A and Gordon, Joshua A},
@@ -1251,7 +1264,7 @@ publisher={American Psychological Association}
 
 @article{logan2019flexmanip,
   title={Is behavioral flexibility manipulatable and, if so, does it improve flexibility and problem solving in a new context?},
-  author={Logan, CJ, and MacPherson, M, and Rowney, C, and Bergeron, L, and Seitz, B, and Blaisdell, A, and Folsom, M, and Johnson-Ulrich, Z, and McCune, KB},
+  author={Logan, C.J., and MacPherson, M., and Rowney, C., and Bergeron, L., and Seitz, B., and Blaisdell, A., and Folsom, M., and Johnson-Ulrich, Z., and McCune, K.B.},
   journal={In principle acceptance by PCI Ecology of the version on 26 Mar 2019},
   year={2019},
   url={http://corinalogan.com/Preregistrations/g_flexmanip.html}
@@ -3129,7 +3142,7 @@ url = {http://florianhartig.github.io/DHARMa/},
 
 @article{logan2016behavioral,
   title={Behavioral flexibility in an invasive bird is independent of other behaviors},
-  author={Logan, C J},
+  author={Logan, C.J.},
   journal={PeerJ},
   volume={4},
   pages={e2215},
